--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 .env
+traefik/certs/
+traefik/secrets/
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
