--- a/PulseBridge.Worker/PulseBridge.Worker.csproj
+++ b/PulseBridge.Worker/PulseBridge.Worker.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
+    <PackageReference Include="Polly" Version="8.6.3" />
   </ItemGroup>
 
   <ItemGroup>
