--- a/PulseBridge.Web/package.json
+++ b/PulseBridge.Web/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@microsoft/signalr": "^9.0.6",
+    "angular-oauth2-oidc": "^19.0.0",
     "jest-editor-support": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
