--- a/PulseBridge.OpenIddict.Idp/appsettings.json
+++ b/PulseBridge.OpenIddict.Idp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "Auth": { "Issuer": "https://localhost:7210" },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=FBASA;Database=AuthServerDb_OpenIddict;Trusted_Connection=True;TrustServerCertificate=True;"
+    "IDP_DB": "Server=FBASA;Database=AuthServerDb_OpenIddict;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
