--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       <<: *app-env  # Merge common .NET env
       ASPNETCORE_URLS: http://0.0.0.0:8080
       ASPNETCORE_FORWARDEDHEADERS_ENABLED: "true"   # ensures original scheme/host from Traefik
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
       # (Your app should also be configured with correct issuer/base URLs)
     labels:
       - traefik.enable=true
