--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,9 +55,49 @@ services:
       timeout: 5s  # Max time per check
       retries: 5  # Fail after N attempts
 
+  idp:
+    image: pulse-bridge-idp:1.0
+    container_name: pulse-bridge-idp
+    environment:
+      <<: *app-env  # Merge common .NET env
+      ASPNETCORE_URLS: http://+:8081  # Listen on port 8080 in container  
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
+    labels:
+      - traefik.enable=true  # Opt-in to Traefik routing
+      - traefik.http.routers.idp.rule=Host(`idp.localtest.me`)  # Route by host
+      - traefik.http.routers.idp.entrypoints=websecure
+      - traefik.http.routers.idp.tls=true  # Enable TLS
+      - traefik.http.routers.idp.middlewares=gzip@file,secure-headers
+      - traefik.http.services.idp.loadbalancer.server.port=8081  # Container port
+      
+      # --- CORS middleware (for UI -> idp) ---
+      - traefik.http.routers.idp.middlewares=idp-cors@docker  # Attach CORS middleware
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      # Headers SignalR typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      # If you prefer, you can allow all headers instead of listing:
+      # - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=*
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      # Optional niceties:
+      - traefik.http.middlewares.idp-cors.headers.addvaryheader=true  # Proper caching of CORS responses
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
+    networks: [app_net, data_net]  # Internal only; fronted by Traefik
+    depends_on:
+      - sql  # Needs DB
+      - redis  # Uses Redis for caching
+      - otel-collector  # Optional: waits for OTEL
+    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
+    restart: unless-stopped  # Auto-restart for resilience
+
+      
   web:
     image: pulse-bridge-web:1.0  
     container_name: pulse-bridge-web  
+    environment:
+      <<: *app-env  # Merge common .NET env
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
     labels:
       - traefik.enable=true  # Opt-in to Traefik routing
       - traefik.http.routers.websecure.rule=Host(`ui.localtest.me`)  # Route by host
@@ -70,35 +110,6 @@ services:
     security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
     restart: unless-stopped  # Auto-restart for resilience
 
-  idp:
-    image: pulse-bridge-idp:1.0
-    container_name: pulse-bridge-idp
-    environment:
-      <<: *app-env  # Merge common .NET env
-      ASPNETCORE_URLS: http://0.0.0.0:8080
-      ASPNETCORE_FORWARDEDHEADERS_ENABLED: "true"   # ensures original scheme/host from Traefik
-      Auth__Issuer: https://idp.localtest.me  # <-- fix
-      # (Your app should also be configured with correct issuer/base URLs)
-    labels:
-      - traefik.enable=true
-      - traefik.docker.network=pulse-bridge_app_net
-      - traefik.http.routers.idp.rule=Host(`idp.localtest.me`)
-      - traefik.http.routers.idp.entrypoints=websecure
-      - traefik.http.routers.idp.tls=true
-      - traefik.http.routers.idp.middlewares=gzip@file,secure-headers@file
-      - traefik.http.services.idp.loadbalancer.server.port=8080   # <-- fix
-    networks: [app_net, data_net]
-    depends_on: [sql, redis, otel-collector]
-    read_only: true
-    tmpfs: ["/tmp"]
-    security_opt: ["no-new-privileges:true"]
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD","wget","-qO-","http://localhost:8080/health/ready"]
-      interval: 20s
-      timeout: 5s
-      retries: 10
-      
   api:
     image: pulse-bridge-api:1.0  
     container_name: pulse-bridge-api  
