updated payment and accounting api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,12 +55,84 @@ services:
       timeout: 5s  # Max time per check
       retries: 5  # Fail after N attempts
 
+  acctapi:
+    image: pulse-bridge-acctapi:1.0
+    container_name: pulse-bridge-acctapi
+    environment:
+      <<: *app-env  # Merge common .NET env
+      ASPNETCORE_URLS: http://+:8083  # Listen on port 8083 in container  
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
+    labels:
+      - traefik.enable=true  # Opt-in to Traefik routing
+      - traefik.http.routers.acctapi.rule=Host(`acctapi.localtest.me`)  # Route by host
+      - traefik.http.routers.acctapi.entrypoints=websecure
+      - traefik.http.routers.acctapi.tls=true  # Enable TLS
+      - traefik.http.routers.acctapi.middlewares=gzip@file,secure-headers
+      - traefik.http.services.acctapi.loadbalancer.server.port=8083  # Container port
+      
+      # --- CORS middleware (for UI -> acctapi) ---
+      - traefik.http.routers.acctapi.middlewares=acctapi-cors@docker  # Attach CORS middleware
+      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      # Headers SignalR typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      # If you prefer, you can allow all headers instead of listing:
+      # - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=*
+      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      # Optional niceties:
+      - traefik.http.middlewares.acctapi-cors.headers.addvaryheader=true  # Proper caching of CORS responses
+      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
+    networks: [app_net, data_net]  # Internal only; fronted by Traefik
+    depends_on:
+      - sql  # Needs DB
+      - redis  # Uses Redis for caching
+      - otel-collector  # Optional: waits for OTEL
+    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
+    restart: unless-stopped  # Auto-restart for resilience
+
+  payapi:
+    image: pulse-bridge-payapi:1.0
+    container_name: pulse-bridge-payapi
+    environment:
+      <<: *app-env  # Merge common .NET env
+      ASPNETCORE_URLS: http://+:8082  # Listen on port 8082 in container  
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
+    labels:
+      - traefik.enable=true  # Opt-in to Traefik routing
+      - traefik.http.routers.payapi.rule=Host(`payapi.localtest.me`)  # Route by host
+      - traefik.http.routers.payapi.entrypoints=websecure
+      - traefik.http.routers.payapi.tls=true  # Enable TLS
+      - traefik.http.routers.payapi.middlewares=gzip@file,secure-headers
+      - traefik.http.services.payapi.loadbalancer.server.port=8082  # Container port
+      
+      # --- CORS middleware (for UI -> payapi) ---
+      - traefik.http.routers.payapi.middlewares=payapi-cors@docker  # Attach CORS middleware
+      - traefik.http.middlewares.payapi-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      # Headers SignalR typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      # If you prefer, you can allow all headers instead of listing:
+      # - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=*
+      - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      # Optional niceties:
+      - traefik.http.middlewares.payapi-cors.headers.addvaryheader=true  # Proper caching of CORS responses
+      - traefik.http.middlewares.payapi-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
+    networks: [app_net, data_net]  # Internal only; fronted by Traefik
+    depends_on:
+      - sql  # Needs DB
+      - redis  # Uses Redis for caching
+      - otel-collector  # Optional: waits for OTEL
+    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
+    restart: unless-stopped  # Auto-restart for resilience
+
   idp:
     image: pulse-bridge-idp:1.0
     container_name: pulse-bridge-idp
     environment:
       <<: *app-env  # Merge common .NET env
-      ASPNETCORE_URLS: http://+:8081  # Listen on port 8080 in container  
+      ASPNETCORE_URLS: http://+:8081  # Listen on port 8081 in container  
       Auth__Issuer: https://idp.localtest.me  # <-- fix
     labels:
       - traefik.enable=true  # Opt-in to Traefik routing
