--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,13 +70,13 @@ services:
       - traefik.http.routers.acctapi.middlewares=gzip@file,secure-headers
       - traefik.http.services.acctapi.loadbalancer.server.port=8080  # Container port
 
-        # --- CORS middleware (for UI -> idp) ---
+        # --- CORS middleware (for UI -> accounting api) ---
       - traefik.http.routers.acctapi.middlewares=acctapi-cors@docker  # Attach CORS middleware
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
-      # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
-      # Headers SignalR typically sends (include Authorization if you use JWT)
-      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      # Headers typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
       # If you prefer, you can allow all headers instead of listing:
       # - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=*
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
@@ -107,13 +107,13 @@ services:
       - traefik.http.routers.payapi.middlewares=gzip@file,secure-headers
       - traefik.http.services.payapi.loadbalancer.server.port=8080  # Container port
       
-        # --- CORS middleware (for UI -> idp) ---
+        # --- CORS middleware (for UI -> payment api) ---
       - traefik.http.routers.payapi.middlewares=payapi-cors@docker  # Attach CORS middleware
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
-      # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
-      # Headers SignalR typically sends (include Authorization if you use JWT)
-      - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      # Headers typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
       # If you prefer, you can allow all headers instead of listing:
       # - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=*
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
@@ -134,7 +134,7 @@ services:
     container_name: pulse-bridge-idp
     environment:
       <<: *app-env  # Merge common .NET env
-      ASPNETCORE_URLS: http://+:8081  # Listen on port 8081 in container  
+      ASPNETCORE_URLS: http://+:8080  # Listen on port 8081 in container  
       Auth__Issuer: https://idp.localtest.me  # <-- fix
     labels:
       - traefik.enable=true  # Opt-in to Traefik routing
@@ -142,15 +142,15 @@ services:
       - traefik.http.routers.idp.entrypoints=websecure
       - traefik.http.routers.idp.tls=true  # Enable TLS
       - traefik.http.routers.idp.middlewares=gzip@file,secure-headers
-      - traefik.http.services.idp.loadbalancer.server.port=8081  # Container port
+      - traefik.http.services.idp.loadbalancer.server.port=8080  # Container port
       
       # --- CORS middleware (for UI -> idp) ---
       - traefik.http.routers.idp.middlewares=idp-cors@docker  # Attach CORS middleware
       - traefik.http.middlewares.idp-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
-      # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
       - traefik.http.middlewares.idp-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
-      # Headers SignalR typically sends (include Authorization if you use JWT)
-      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      # Headers typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
       # If you prefer, you can allow all headers instead of listing:
       # - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=*
       - traefik.http.middlewares.idp-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
