--- a/PulseBridge.Api/PulseBridge.Api.csproj
+++ b/PulseBridge.Api/PulseBridge.Api.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.17" />
   </ItemGroup>
 
