--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,54 @@ services:
       timeout: 5s  # Max time per check
       retries: 5  # Fail after N attempts
 
+  idp:
+    image: pulse-bridge-idp:1.0
+    container_name: pulse-bridge-idp
+    environment:
+      <<: *app-env  # Merge common .NET env
+      ASPNETCORE_URLS: http://+:8080  # Listen on port 8081 in container  
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
+    labels:
+      # Opt-in to Traefik routing
+      - traefik.enable=true  
+      - traefik.docker.network=pulse-bridge_app_net
+
+      # router/service config
+      - traefik.http.routers.idp.rule=Host(`idp.localtest.me`)  # Route by host
+      - traefik.http.routers.idp.entrypoints=websecure
+      - traefik.http.routers.idp.tls=true  # Enable TLS
+      - traefik.http.routers.idp.middlewares=retry-2@file,gzip@file,secure-headers@file
+
+      # load balancer service with health checks and custom server transport
+      - traefik.http.services.idp.loadbalancer.server.port=8080  # Container port
+      - traefik.http.services.idp.loadbalancer.healthcheck.path=/health/ready
+      - traefik.http.services.idp.loadbalancer.healthcheck.interval=10s
+      - traefik.http.services.idp.loadbalancer.healthcheck.timeout=3s
+
+      # --- CORS middleware (for UI -> idp) ---
+      - traefik.http.routers.idp.middlewares=idp-cors@docker  # Attach CORS middleware
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      
+      # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      
+      # Headers typically sends (include Authorization if you use JWT)
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
+      
+      # If you prefer, you can allow all headers instead of listing:
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      
+      # Optional niceties:
+      - traefik.http.middlewares.idp-cors.headers.addvaryheader=true  # Proper caching of CORS responses
+      - traefik.http.middlewares.idp-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
+    networks: [app_net, data_net]  # Internal only; fronted by Traefik
+    depends_on:
+      - sql  # Needs DB
+      - redis  # Uses Redis for caching
+      - otel-collector  # Optional: waits for OTEL
+    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
+    restart: unless-stopped  # Auto-restart for resilience
+
   acctapi:
     image: pulse-bridge-acctapi:1.0
     container_name: pulse-bridge-acctapi
@@ -63,23 +111,35 @@ services:
       ASPNETCORE_URLS: http://+:8080  # Listen on port 8083 in container  
       Auth__Issuer: https://idp.localtest.me  # <-- fix
     labels:
-      - traefik.enable=true  # Opt-in to Traefik routing
+      # Opt-in to Traefik routing
+      - traefik.enable=true  
+      - traefik.docker.network=pulse-bridge_app_net
+
+      # router/service config
       - traefik.http.routers.acctapi.rule=Host(`acctapi.localtest.me`)  # Route by host
       - traefik.http.routers.acctapi.entrypoints=websecure
       - traefik.http.routers.acctapi.tls=true  # Enable TLS
-      - traefik.http.routers.acctapi.middlewares=gzip@file,secure-headers
+      - traefik.http.routers.acctapi.middlewares=retry-2@file,gzip@file,secure-headers@file
+
+      # load balancer service with health checks and custom server transport
       - traefik.http.services.acctapi.loadbalancer.server.port=8080  # Container port
+      - traefik.http.services.acctapi.loadbalancer.healthcheck.path=/health/ready
+      - traefik.http.services.acctapi.loadbalancer.healthcheck.interval=10s
+      - traefik.http.services.acctapi.loadbalancer.healthcheck.timeout=3s
 
         # --- CORS middleware (for UI -> accounting api) ---
       - traefik.http.routers.acctapi.middlewares=acctapi-cors@docker  # Attach CORS middleware
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      
       # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      
       # Headers typically sends (include Authorization if you use JWT)
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
+      
       # If you prefer, you can allow all headers instead of listing:
-      # - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowheaders=*
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      
       # Optional niceties:
       - traefik.http.middlewares.acctapi-cors.headers.addvaryheader=true  # Proper caching of CORS responses
       - traefik.http.middlewares.acctapi-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
@@ -100,23 +160,35 @@ services:
       ASPNETCORE_URLS: http://+:8080  # Listen on port 8082 in container  
       Auth__Issuer: https://idp.localtest.me  # <-- fix
     labels:
-      - traefik.enable=true  # Opt-in to Traefik routing
+      # Opt-in to Traefik routing
+      - traefik.enable=true  
+      - traefik.docker.network=pulse-bridge_app_net
+
+      # router/service config
       - traefik.http.routers.payapi.rule=Host(`payapi.localtest.me`)  # Route by host
       - traefik.http.routers.payapi.entrypoints=websecure
       - traefik.http.routers.payapi.tls=true  # Enable TLS
-      - traefik.http.routers.payapi.middlewares=gzip@file,secure-headers
+      - traefik.http.routers.payapi.middlewares=retry-2@file,gzip@file,secure-headers@file
+
+      # load balancer service with health checks and custom server transport
       - traefik.http.services.payapi.loadbalancer.server.port=8080  # Container port
-      
-        # --- CORS middleware (for UI -> payment api) ---
+      - traefik.http.services.payapi.loadbalancer.healthcheck.path=/health/ready
+      - traefik.http.services.payapi.loadbalancer.healthcheck.interval=10s
+      - traefik.http.services.payapi.loadbalancer.healthcheck.timeout=3s
+
+      # --- CORS middleware (for UI -> payment api) ---
       - traefik.http.routers.payapi.middlewares=payapi-cors@docker  # Attach CORS middleware
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      
       # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      
       # Headers typically sends (include Authorization if you use JWT)
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
+      
       # If you prefer, you can allow all headers instead of listing:
-      # - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowheaders=*
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      
       # Optional niceties:
       - traefik.http.middlewares.payapi-cors.headers.addvaryheader=true  # Proper caching of CORS responses
       - traefik.http.middlewares.payapi-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
@@ -129,61 +201,6 @@ services:
     security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
     restart: unless-stopped  # Auto-restart for resilience
 
-  idp:
-    image: pulse-bridge-idp:1.0
-    container_name: pulse-bridge-idp
-    environment:
-      <<: *app-env  # Merge common .NET env
-      ASPNETCORE_URLS: http://+:8080  # Listen on port 8081 in container  
-      Auth__Issuer: https://idp.localtest.me  # <-- fix
-    labels:
-      - traefik.enable=true  # Opt-in to Traefik routing
-      - traefik.http.routers.idp.rule=Host(`idp.localtest.me`)  # Route by host
-      - traefik.http.routers.idp.entrypoints=websecure
-      - traefik.http.routers.idp.tls=true  # Enable TLS
-      - traefik.http.routers.idp.middlewares=gzip@file,secure-headers
-      - traefik.http.services.idp.loadbalancer.server.port=8080  # Container port
-      
-      # --- CORS middleware (for UI -> idp) ---
-      - traefik.http.routers.idp.middlewares=idp-cors@docker  # Attach CORS middleware
-      - traefik.http.middlewares.idp-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
-      # Methods needed (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
-      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
-      # Headers typically sends (include Authorization if you use JWT)
-      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With  # Allow headers JWT use
-      # If you prefer, you can allow all headers instead of listing:
-      # - traefik.http.middlewares.idp-cors.headers.accesscontrolallowheaders=*
-      - traefik.http.middlewares.idp-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
-      # Optional niceties:
-      - traefik.http.middlewares.idp-cors.headers.addvaryheader=true  # Proper caching of CORS responses
-      - traefik.http.middlewares.idp-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
-    networks: [app_net, data_net]  # Internal only; fronted by Traefik
-    depends_on:
-      - sql  # Needs DB
-      - redis  # Uses Redis for caching
-      - otel-collector  # Optional: waits for OTEL
-    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
-    restart: unless-stopped  # Auto-restart for resilience
-
-      
-  web:
-    image: pulse-bridge-web:1.0  
-    container_name: pulse-bridge-web  
-    environment:
-      <<: *app-env  # Merge common .NET env
-      Auth__Issuer: https://idp.localtest.me  # <-- fix
-    labels:
-      - traefik.enable=true  # Opt-in to Traefik routing
-      - traefik.http.routers.websecure.rule=Host(`ui.localtest.me`)  # Route by host
-      - traefik.http.routers.websecure.entrypoints=websecure
-      - traefik.http.routers.websecure.tls=true  # Enable TLS
-      - traefik.http.routers.websecure.middlewares=gzip@file,secure-headers@file
-      - traefik.http.services.web.loadbalancer.server.port=80  # Container port
-    networks: [app_net]  # Only needs internal app net
-    depends_on: [traefik]  # Ensure proxy ready before start
-    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
-    restart: unless-stopped  # Auto-restart for resilience
-
   api:
     image: pulse-bridge-api:1.0  
     container_name: pulse-bridge-api  
@@ -191,23 +208,35 @@ services:
       <<: *app-env  # Merge common .NET env
       ASPNETCORE_URLS: http://+:8080  
     labels:
-      - traefik.enable=true  # Opt-in to Traefik routing
+      # Opt-in to Traefik routing
+      - traefik.enable=true  
+      - traefik.docker.network=pulse-bridge_app_net
+
+      # router/service config
       - traefik.http.routers.api.rule=Host(`api.localtest.me`)  # Route by host
       - traefik.http.routers.api.entrypoints=websecure
       - traefik.http.routers.api.tls=true  # Enable TLS
-      - traefik.http.routers.api.middlewares=gzip@file,secure-headers
+      - traefik.http.routers.api.middlewares=retry-2@file,gzip@file,secure-headers@file
+
+      # load balancer service with health checks and custom server transport
       - traefik.http.services.api.loadbalancer.server.port=8080  # Container port
-      
+      - traefik.http.services.api.loadbalancer.healthcheck.path=/health/ready
+      - traefik.http.services.api.loadbalancer.healthcheck.interval=10s
+      - traefik.http.services.api.loadbalancer.healthcheck.timeout=3s
+
       # --- CORS middleware (for UI -> API) ---
       - traefik.http.routers.api.middlewares=api-cors@docker  # Attach CORS middleware
       - traefik.http.middlewares.api-cors.headers.accesscontrolalloworiginlist=https://ui.localtest.me  # Allowed origin
+      
       # Methods needed by SignalR (negotiate = POST; ws upgrade = GET; and preflight = OPTIONS)
       - traefik.http.middlewares.api-cors.headers.accesscontrolallowmethods=GET,POST,OPTIONS  # Allow needed methods
+      
       # Headers SignalR typically sends (include Authorization if you use JWT)
       - traefik.http.middlewares.api-cors.headers.accesscontrolallowheaders=Authorization,Content-Type,X-Requested-With,X-SignalR-User-Agent  # Allow headers SignalR/JWT use
+      
       # If you prefer, you can allow all headers instead of listing:
-      # - traefik.http.middlewares.api-cors.headers.accesscontrolallowheaders=*
       - traefik.http.middlewares.api-cors.headers.accesscontrolallowcredentials=true  # Allow cookies/credentials
+      
       # Optional niceties:
       - traefik.http.middlewares.api-cors.headers.addvaryheader=true  # Proper caching of CORS responses
       - traefik.http.middlewares.api-cors.headers.accesscontrolmaxage=86400  # Cache preflight for a day
@@ -216,6 +245,28 @@ services:
       - sql  # Needs DB
       - redis  # Uses Redis for caching
       - otel-collector  # Optional: waits for OTEL
+    security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
+    restart: unless-stopped  # Auto-restart for resilience
+
+  web:
+    image: pulse-bridge-web:1.0  
+    container_name: pulse-bridge-web  
+    environment:
+      <<: *app-env  # Merge common .NET env
+      Auth__Issuer: https://idp.localtest.me  # <-- fix
+    labels:
+      # Opt-in to Traefik routing
+      - traefik.enable=true  
+      - traefik.docker.network=pulse-bridge_app_net
+
+      # router/service config
+      - traefik.http.routers.websecure.rule=Host(`ui.localtest.me`)  # Route by host
+      - traefik.http.routers.websecure.entrypoints=websecure
+      - traefik.http.routers.websecure.tls=true  # Enable TLS
+      - traefik.http.routers.websecure.middlewares=gzip@file,secure-headers@file
+      - traefik.http.services.web.loadbalancer.server.port=80  # Container port
+    networks: [app_net]  # Only needs internal app net
+    depends_on: [traefik]  # Ensure proxy ready before start
     security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
     restart: unless-stopped  # Auto-restart for resilience
 
@@ -231,11 +282,6 @@ services:
       - redis  # Uses Redis for caching
       - otel-collector  # Optional: waits for OTEL
     networks: [app_net, data_net]  # Access app and data tiers
-    healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/"]  # Probe HTTP endpoint
-      interval: 10s
-      timeout: 5s
-      retries: 10
     security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
     restart: unless-stopped  # Auto-restart for resilience
 
@@ -252,11 +298,6 @@ services:
       - rabbitmq  # Publishes/consumes via broker
       - otel-collector  # Optional: waits for OTEL
     networks: [app_net, data_net]  # Needs app/data access
-    healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/"]  # Probe HTTP endpoint
-      interval: 10s
-      timeout: 5s
-      retries: 10
     security_opt: ["no-new-privileges:true"]  # Drop root privileges for security
     restart: unless-stopped  # Auto-restart for resilience
   
